Style: fix overflow select box

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,11 @@ select {
   margin: 20px;
   padding: 10px;
   font-size: 16px;
+  line-height: 2.5;
+  width: 80%;
+  max-width: 300px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 div {
